--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<!-- Con esta zona ponemos la cabecera -->
 	<head>
 			<title> Estoy aprendiendo</title>
+			<link rel="StyleSheet" type="text/css" href="estilos.css">
 	</head>
 
 	<body>
@@ -29,10 +30,19 @@
 			<p>Arriba hay una línea</p>
 			<br>
 			
-
+ 
 			<!-- con alt="" mostramos un texto alternativo si la imagen no esta disponible y SRC es recurso de donde sacamos el archivo, 
 			tanto width(Ancho) como height(alto) nos permite redimencionar el tamaño de nuestra imagen -->
 			<img alt="Los simpson" src="imagenes/simpson.jpg" width="500px" height="250px"> 
+
+			<p>Temario</p>
+
+			<!-- Redireccionar a otra pagina en la misma ventana <a href="">___</a> -->
+			<p><a href="http://aprendiendo.dev/tablas.html"> Tablas </a></p>
+			<p><a href="http://aprendiendo.dev/aprendiendocss.html"> Css </a></p>
+			<!-- Redireccionar a otra pagina en una nueva pestaña (target="_blank") -->
+			<!-- Con title ponemos un mensaje al pasar el cursor sobre el texto -->
+			<p><a target="_blank" title="Esta pagina te lleva a tablas" href="http://aprendiendo.dev/tablas.html"> Tablas en una nueva pestaña </a></p>
 
 	</body>
 
